<resources>
    <string name="app_name">MinskZooApp</string>
    <string name="drawer_opened">Выберите категорию</string>
    <string name="drawer_closed">MinskZoo</string>
    <string name="action_settings">Settings</string>
    <string name="exhibits_feed">https://gist.githubusercontent.com/AndySharou/c2e7ca034962811fe65e0400670db80c/raw/c7f6dbbba5c640f7e250855178826400735fb334</string>
    <string name="birds_feed">https://raw.githubusercontent.com/AndySharou/ZooApp/master/data</string>
    <string name="mammals_feed">https://raw.githubusercontent.com/AndySharou/ZooApp/master/data</string>
    <string name="gallery_feed">https://raw.githubusercontent.com/AndySharou/ZooApp/master/data</string>
    <string name="map_pins_feed">https://raw.githubusercontent.com/AndySharou/ZooApp/master/data</string>
    <string name="working_hours_feed">https://raw.githubusercontent.com/AndySharou/ZooApp/master/data</string>
    <string name="title_activity_maps">Карта</string>
    <string name="section_exhibits">Exhibits</string>
    <string name="section_mammals">Млекопитающие</string>
    <string name="section_birds">Птицы</string>
    <string name="section_gallery">Галерея</string>
    <string name="section_map">Карта</string>
    <string name="section_visitors">Для посетителей</string>
    <string name="species">лат. </string>
    <string name="bclass">Класс: </string>
    <string name="order">Отряд: </string>
    <string name="family">Семейство: </string>
    <string name="for_visitors">Посетителям</string>
    <string name="working_hours_tab">Режим работы</string>
    <string name="address_tab">Наш адрес</string>
    <string name="excursions_tab">Экскурсии и выезды</string>
    <string name="clubs_tab">Наши кружки</string>
    <string name="horse_riding_tab">Индивидуальные занятия верховой ездой</string>
    <string name="regulations_tab">Правила посещения</string>
    <string name="working_hours_days">- ежедневно. \r\n - без выходных. \r\n - без перерыва на обед</string>
    <string name="working_hours_time">в будни -  с 10:00 до 18:00. \r\n в воскресенье и праздники - с 9:00 до 18:00</string>
    <string name="working_hours_cass_time">в будни - с 10:00 до 17:45 \r\n в воскресенье и праздники - с 9:00 до 17:45 (КАССА ДЕЛЬФИНАРИЯ РАБОТАЕТ С 10 00 до 19 00) </string>
    <string name="working_hours_tech_break">Касса дельфинария: 12:15 -12:20, 13:45 - 13:50, 15:15 - 15:45, 16:55 - 17:00 \r\n Касса зоопарка №1: 11:30 - 11:35, 14:00 - 14:30, 14:50 - 15:15, 17:00 - 17:05 \r\n Касса зоопарка №3: 12:40 - 12:45, 13:40- 13:45, 15:50 - 16:15, 17:05 - 17:10 \r\n Касса зоопарка №4 (работает в выходные дни): 11:50-11:55, 14:40-14.45, 16:20-16:45, 17:45-17:50 </string>
    <string name="working_hours_exposition">\r\n- Контактная площадка «Вясковая сядзіба» работает с 10 00 до 17 00. Понедельник - санитарный день. \r\n - Экспозиции «Аквариум»  и «Удивительный мир террариума»- в понедельник с 10:00 до 12:00 не работают (санитарный час)</string>
    <string name="address_adress">Наш адрес: \r\nРеспублика Беларусь\r\nг.Минск, ул. Ташкентская, 40\r\n220066</string>
    <string name="address_how_to">Как доехать:\r\nОт станции метро «Автозаводская» автобусами №22,16,21 или троллейбусами №16,17,92 до остановки «Зоопарк».\r\nОт станции метро «Партизанская» троллейбусами №16,17 или автобусом №59 до остановки «Зоопарк»\r\nОт проспекта Рокоссовского до остановки «Зоопарк» следует троллейбус №49</string>
    <string name="exposition_obzorn">1. Обзорная экскурсия по зоопарку (ознакомление с коллекцией животных, включает осмотр экзотариума и посещение террариума и аквариума)

\r\nНа обзорной экскурсии посетители смогут увидеть наиболее интересных животных из коллекции Минского зоопарка, узнать об особенностях их образа жизни в природе и интересные факты из жизни в зоопарке. Посещение контактной площадки, где можно не только увидеть, но и в буквальном смысле прикоснуться к животным, оставит неизгладимое впечатление у малышей. Экскурсия включает рассказ о павильоне «Ориноко»(Экзотариуме) и его обитателях. Здесь можно увидеть экзотических рыб и рептилий (пираньи, анаконды, крокодиловые кайманы и т.д.), летучих мышей, самых больших грызунов в мире - капибар, броненосцев, мелких обезьян (тамаринов, капуцинов, игрунок и саймири), ярких попугаев ара, грациозных хищников - оцелотов, ягуаров и пум. Экзотариум оформлен в стиле индейцев Южной Америки. Удивительные скалы, водоемы и 7ми метровый водопад позволяют полностью окунуться в атмосферу тропического леса!

\r\n\r\n2. Обзорная экскурсия по динопарку (ознакомление с экспозицией динопарка, рассказ о динозаврах, фигуры которых представлены в парке)

\r\nНа экскурсии посетители окунуться в доисторический мир динозавров, узнают о тайнах их происхождения, жизни и вымирания. Специалисты расскажут интересные факты о жизни динозавров и их физиологии, а также каким образом происходит изучение останков динозавров, окаменелостей и других свидетельств их жизни на Земле.

\r\nЗаписаться на экскурсию можно по телефону 8(017) 340-51-78

\r\nЗапись на экскурсии проводится с понедельника по пятницу с 8-00 до 17-00, в пятницу до 16-00.

\r\nПросим заявки на экскурсии подавать предварительно, запись прекращается за 2 дня до проведения экскурсии.

\r\nСтоимость экскурсий:

\r\nГруппы комплектуются из расчета 25 и менее человек. При комплектации группы из детей 2 сопровождающих взрослых обслуживаются бесплатно.

\r\nСтоимость обзорной экскурсии – 30.00 рублей / 300 000 рублей + входные билеты (приобретаются отдельно)</string>
    <string name="exposition_vyst">\r\nВыездные мероприятия

\r\nМинский зоопарк предлагает проведение выездных мероприятий для учащихся школ, летних лагерей, студентов. Выезды организуются в библиотеки, кинотеатры, учреждения образования - школы, детские сады, школы - интернаты.

\r\n\r\nВ программе мероприятия:

\r\n- минивыставка животных (8-11 видов животных, среди них - обыкновенный еж, домашний хорек, декоративный кролик, акациевая и лабораторные крысы разных линий, сирийский и джунгарский хомяки, степная черепаха, мадагаскарские тараканы, желтоголовая и иглистая мыши, монгольская песчанка, декоративные куры и другие)

\r\n- мультимедийная презентация об истории создания зоопарка, интересные рассказы о жизни некоторых животных и о животных, привезенных на выставку

\r\n- викторины и загадки о животных с вручением небольших сувениров

\r\n- видеоролик о зоопарке

\r\nПродолжительность мероприятия 40-60 минут. С некоторыми из животных можно сфотографироваться.

\r\nГруппы формируются из расчета 30-40 человек, стоимость билета на одного посетителя - 1 рубль 50 копеек / 15 000 рублей.

\r\nДля организации выставки необходимо записаться по телефону (017)340-51-78 за 5-10 дней до проведения.

\r\nПринимающей стороне желательно иметь в наличии мультимедийную установку, 4-5 столов для размещения выставки животных, стулья для просмотра посетителями презентации и фильма.

\r\nДля детей с особенностями психофизического развития предлагаются специально разработанные занятия-лекции. Во время занятия демонстрируются ручные животные, которых можно не только увидеть, услышать, но и дотронуться до них. Таким детям особенно важен тактильный контакт с животными, так как многие из них ограничены в свободе передвижения . Наши занятия дарят детям новый познавательный и эмоциональный опыт.

\r\nДля льготных категорий населения (дети с особенностями психо-физического развития и дети-сироты) возможно проведение выездных лекций на благотворительной основе.

\r\nМинским зоопарком также проводятся выездные выставки животных. На тематических выставках демонстрируется определенная группа животных, на обзорных выставках можно увидеть наиболее интересных представителей разных отрядов животных. Выездные выставки могут быть организованы в школах, клубах, дворцах и парках культуры, в летних лагерях, в детских домах и интернатах, в библиотеках, санаториях и других учреждениях образования и культуры Минска и Минского района. Наши выставки вызывают большой интерес у посетителей, независимо от возраста и уровня подготовки.

\r\nО теме, дне и времени проведения выездной выставки можно договориться в Просветительском отделе зоопарка
\r\nпо телефону 8(017) 340-51-78

\r\nЗапись проводится с понедельника по пятницу с 8-00 до 17-00, в пятницу до 16-00.</string>
    <string name="clubs_1">На базе зоопарка работает биологический кружок "В мире животных", где учащиеся получают теоретические знания о животном мире и приобретают практические навыки по уходу за домашними питомцами. Для школьников есть возможность проявить любовь к животным и получить позитивный опыт общения с братьями меньшими. На занятиях кружка происходит углубленное изучение биологии и физиологии животных, образа их жизни. Это дает возможность детям заглянуть во внутренний мир зоопарка.

\r\nРуководитель кружка: младший научный сотрудник Бодрова Елена Ильинична.

\r\nВ кружок принимаются дети с 12летнего возраста. Обучение в кружке бесплатное.

\r\nПодробная информация и запись по телефону 8(017)3405178</string>
    <string name="clubs_2">\r\nНа территории зоопарка работает кружок верховой езды "Кони и пони".

\r\nКружок «Кони и пони» является учебно-творческим формированием для обучения целеустремленных детей и подростков правильному и гуманному обращению с лошадьми на основе непосредственного контакта с животными. Основными целями и задачами деятельности кружка являются:

\r\nа) выявление и развитие творческих способностей детей; создание условий для их развития и воспитания;

\r\nб) изучение эволюции лошади, перспектив использования лошадей в хозяйственном комплексе;

\r\nв) оказание практической помощи зоопарку, проведение природоохранных мероприятий, развитие у ребят интереса к научным исследованиям;

\r\nг) приобретение детьми навыков необходимых для самостоятельной работы с лошадьми;

\r\nд) воспитание любви и бережного отношения к природе, чувства коллективизма и товарищества.

\r\nКружок организован на базе Минского зоопарка. Обучение проводится на основе разработанной программы. В кружке учащиеся получают необходимые начальные знания по правильному уходу и навыкам работы с лошадьми.

\r\nЗанятия в кружке включают:

    \r\nОбучение навыкам верховой езды;
    \r\nТеоретические и практические занятия;
    \r\nНаблюдение за животными в зоопарке;
    \r\nКонтроль знаний и умений на викторинах, зачетах, экзаменах;
    \r\nПроведение субботников, участие в природоохранных мероприятиях.

\r\nЗанятия проводятся по группам, согласно расписанию.

\r\nНабор желающих заниматься в кружке происходит в августе. В кружок принимаются дети и подростки в возрасте от 11 до 18 лет.

\r\nСтоимость разового занятия - 15.00 рублей /150 000 тысяч белорусских рублей.

\r\nРуководители кружка:

\r\nАлферова Инна Витальевна

\r\nКонтактный телефон: 8-029-6549934

\r\nПрокопчик Анастасия Андреевна

\r\nКонтактный телефон: 8-029-3515899


\r\nИндивидуальное занятие верховой ездой (45 мин.) для всех возрастных групп   20.00 рублей / 200 000 рублей

\r\nКонтактный телефон для предварительной записи на индивидуальное занятие верховой ездой

\r\n8 029 654 99 34 , 8 029 351 58 99

\r\nДля верховой езды необходимо надевать подходящую одежду (не маркую, полностью закрывающую ноги, плотную) и удобную обувь.</string>
</resources>