<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.andrew.zooapp.fragments.tabs.WorkingHoursTabFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="205dp"
        android:src="@drawable/zoo_1"
        android:scaleType="fitEnd" />



        <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tabs"
        android:fillViewport="true">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Зоопарк работает:"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>

            <TextView
                android:id="@+id/days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/working_hours_days"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Режим работы касс:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/times"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/working_hours_time"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Технические перерывы:"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_centerInParent="true"/>
            <TextView
                android:id="@+id/cass_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/working_hours_cass_time"/>
            <TextView
                android:id="@+id/tech_break"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/working_hours_tech_break"/>
            <TextView
                android:id="@+id/exposition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16dp"
                android:text="@string/working_hours_exposition"/>

            </LinearLayout>
    </ScrollView>

</LinearLayout>